--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,13 +1,23 @@
 ---
-
+ 
 - hosts: all
   become: true
   tasks:
 
-  - name: Install apache2 and php package 
-    package:
-      name: 
-        - "{{apache_package}}"
-        - "{{php_package}}"
+  - name: install apache and php for Ubuntu servers
+    apt:
+      name:
+        - apache2
+        - libapache2-mod-php
       state: latest
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
+
+  - name: install apache and php for CentOS servers
+    yum:
+      name:
+        - httpd
+        - php
+      state: latest
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
