Add tasks start, enable, restart a service for CentOS

--- a/site.yml
+++ b/site.yml
@@ -57,6 +57,14 @@
       state: latest
     when: ansible_distribution == "CentOS"
 
+  - name: start and enable httpd (CentOS)
+    tags: apache, httpd, centos
+    service:
+      name: httpd
+      state: started
+      enabled: yes
+    when: ansible_distribution == "CentOS" 
+
   - name: copy/create default site
     tags: apache,apache2,httpd
     copy:
@@ -66,6 +74,22 @@
       group: root
       mode: 0644
 
+  - name: change e-mail address for admin
+    tags: apache,centos,httpd
+    lineinfile:
+      path: /etc/httpd/conf/httpd.conf
+      regexp: '^ServerAdmin'
+      line: ServerAdmin somebody@somewhere.net
+    when: ansible_distribution == "CentOS"
+    register: httpd
+
+  - name: restart httpd (CentOS)
+    tags: apache,centos,httpd
+    service:
+      name: httpd
+      state: restarted
+    when: httpd.changed
+  
 - hosts: db_servers
   become: true
   tasks:
