Create new task Template for base role

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -3,3 +3,13 @@
   authorized_key:
     user: simone
     key: ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIJLfY9w/kdXYjW96l896r8a0R3XK1ldc40RqwaVcazKq ansible
+
+- name: generate sshd_config file from template
+  tags: ssh
+  template:
+    src: "{{ ssh_template_file }}"
+    dest: /etc/ssh/ssh_config
+    owner: root
+    group: root
+    mode: 0644
+  notify: restart_sshd
